[feature/openstack] fix style and required scrollbar component

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -9772,13 +9772,13 @@ g.shadow {
       cursor: pointer; }
       .dash-ops-resource-list .resource-list-nav > .resource-tab .resource-count {
         padding-left: 0;
-        padding-top: 55px;
+        padding-top: 50px;
         height: 5px;
-        font-size: 12px;
+        font-size: 14px;
         display: block;
         text-align: center;
         margin: 0 auto 10px;
-        color: #999;
+        color: #6065a0;
         position: absolute;
         top: 50px;
         width: 100%;
