--- a/src/assets/scss/os/_dashboard.scss
+++ b/src/assets/scss/os/_dashboard.scss
@@ -300,13 +300,13 @@
 
         .resource-count {
           padding-left : 0;
-          padding-top  : 55px;
+          padding-top  : 50px;
           height       : 5px;
-          font-size    : 12px;
+          font-size    : 14px;
           display      : block;
           text-align   : center;
           margin       : 0 auto 10px;
-          color        : #999;
+          color        : #6065a0;
           position: absolute;
           top: 50px;
           width: 100%;
